# cat-github-watcher

./: .gitignore  AGENTS.md  PHASE3_MERGE_IMPLEMENTATION.md  README.ja.md  README.md  STRUCTURE.md  _config.yml  config.toml.example  demo_automation.py  demo_comparison.py  fetch_pr_html.py  gh_pr_phase_monitor.py  pyproject.toml  requirements-automation.txt  ruff.toml
.github/: copilot-instructions.md
docs/: PR67_IMPLEMENTATION.md  button-detection-improvements.ja.md  window-activation-feature.md
generated-docs/: development-status-generated-prompt.md  development-status.md  project-overview-generated-prompt.md  project-overview.md
tests/: conftest.py  test_all_phase3_timeout.py  test_assign_issue_to_copilot.py  test_auto_update_config.py  test_auto_updater.py  test_batteries_included_defaults.py  test_browser_automation.py  test_browser_automation_click.py  test_browser_automation_ocr.py  test_browser_automation_window.py  test_check_process_before_autoraise.py  test_color_scheme_config.py  test_config_rulesets.py  test_config_rulesets_features.py  test_elapsed_time_display.py  test_error_logging.py  test_etag_checker.py  test_fetch_pr_html.py  test_graphql_client_rate_limit.py  test_graphql_query_intent_display.py  test_has_comments_with_reactions.py  test_has_unresolved_review_threads.py  test_hot_reload.py  test_html_status_processor.py  test_html_to_markdown.py  test_integration_issue_fetching.py  test_interval_contamination_bug.py  test_interval_parsing.py  test_is_llm_working.py  test_issue_assignment_priority.py  test_issue_etag_checker.py  (+44 more)
(+90 files in other folders)
